--- a/Practice/presentation/style.css
+++ b/Practice/presentation/style.css
@@ -1,3 +1,4 @@
+
 .box{
     border:2px solid black;
     margin:10px;
@@ -26,4 +27,18 @@ h1{
 
 .elist a{
     text-decoration:none;
+}
+
+#container{
+    width:25%;
+    margin-left:36%;
+    background-color: skyblue;
+    border:5px solid black;
+    text-align:center;
+    font-size:1.2em;
+    font-weight:bolder;
+}
+
+#list{
+    font-size:1.25em;
 }
